# black-scholes-pricer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_system.sh
interfaces/: cli.py  streamlit_app.py
src/core/: black_scholes.py  distributions.py
src/diagnostics/: arbitrage.py
src/solvers/: brent.py  implied_vol.py  newton_raphson.py
src/utils/: constants.py  types.py
tests/: conftest.py
tests/unit/: test_arbitrage.py  test_black_scholes.py  test_implied_vol.py
